# Zeus

./: .gitignore  README.md  design.md  index.html  pnpm-lock.yaml  report.md
AI/: reference_impl.md
AI/AthenaAI/: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt  run_simulation.py
AI/AthenaAI/athenaai/: __init__.py  agent_runtime.py  agents.py  config.py  model_client.py  peer_bus.py  trace.py  wrapper.py
AI/AthenaAI/athenaai/api/: __init__.py  server.py
AI/AthenaAI/athenaai/audit/: __init__.py  live_view.py  logger.py
AI/AthenaAI/athenaai/forecast/: __init__.py  timesfm.py
AI/AthenaAI/athenaai/market/: __init__.py  advisory.py  cost_curves.py  data_loader.py
AI/AthenaAI/athenaai/mcp/: __init__.py  forecast_mcp.py
AI/AthenaAI/athenaai/physics/: __init__.py  cache.py  engine.py  n1.py  process_pool.py
AI/AthenaAI/athenaai/schema/: __init__.py  bundle.py
AI/AthenaAI/athenaai/simulator/: __init__.py  gridsimulator.py
AI/AthenaAI/athenaai/tools/: __init__.py  physics.py
AI/AthenaAI/opencode/: opencode.jsonc
AI/AthenaAI/tests/: test_agents.py  test_config.py  test_forecast.py  test_market.py  test_model_client.py  test_new_tools.py  test_peer_bus.py  test_physics.py  test_physics_engine.py  test_runtime.py  test_schema.py  test_simulation.py  test_simulator.py  test_timestamp_propagation.py  test_tools.py  test_wrapper.py
backend/: analytics.py  copilot.py  main.py  requirements.txt
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
tools/: generate_asset_metadata.py  project_original_layout_to_czech.py
(+36 files in other folders)
